<resources>
    <string name="app_name">LuxDiveTravel</string>
    <string name="house">home</string>
    <string name="email_us">Contact us</string>
    <string name="DestinationButton">Choose your destination</string>
    <string name="insurance">Insurance</string>
    <string name="why_us">why us</string>
    <string name="explore">explore</string>
    <string name="something">something</string>
    <string name="tool_bar_title">Lux Dive Travel</string>
    <string name="textview">Malta, island country located in the central Mediterranean Sea. A small but strategically important group of islands, the archipelago has through its long and turbulent history played a vital role in the struggles of a succession of powers for domination of the Mediterranean and in the interplay between emerging Europe and the older cultures of Africa and the Middle East. As a result, Maltese society has been molded by centuries of foreign rule by various powers, including the Phoenicians, Romans, Greeks, Arabs, Normans, Sicilians, Swabians, Aragonese, Hospitallers, French, and British.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit eget gravida cum sociis natoque penatibus et. Purus gravida quis blandit turpis cursus in hac habitasse. A lacus vestibulum sed arcu. Ornare lectus sit amet est. Duis at consectetur lorem donec. Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Quis lectus nulla at volutpat diam ut venenatis tellus in. Turpis in eu mi bibendum neque egestas congue quisque. Id eu nisl nunc mi ipsum faucibus vitae. Sagittis orci a scelerisque purus semper. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Ligula ullamcorper malesuada proin libero nunc. Non tellus orci ac auctor augue mauris augue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Convallis tellus id interdum velit laoreet id donec. Hac habitasse platea dictumst quisque sagittis purus. Ut eu sem integer vitae. Adipiscing at in tellus integer feugiat.

Nulla facilisi etiam dignissim diam quis enim. Enim praesent elementum facilisis leo vel. Tellus in hac habitasse platea dictumst vestibulum. Arcu cursus euismod quis viverra nibh cras. Et tortor consequat id porta. Viverra maecenas accumsan lacus vel. Feugiat in fermentum posuere urna nec tincidunt praesent. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Nam libero justo laoreet sit. Tristique risus nec feugiat in fermentum posuere. Id eu nisl nunc mi ipsum faucibus vitae. Elementum integer enim neque volutpat ac tincidunt vitae.

Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est. Sed risus pretium quam vulputate dignissim suspendisse. Varius morbi enim nunc faucibus a. Ultricies leo integer malesuada nunc vel risus commodo. Nunc mi ipsum faucibus vitae aliquet. Risus feugiat in ante metus dictum. Malesuada nunc vel risus commodo viverra. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Sed cras ornare arcu dui vivamus. Porttitor eget dolor morbi non arcu risus. Leo vel fringilla est ullamcorper eget nulla. Nibh venenatis cras sed felis eget velit aliquet sagittis. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Pharetra et ultrices neque ornare aenean euismod elementum. Est sit amet facilisis magna etiam tempor. Convallis convallis tellus id interdum velit laoreet id. Ante in nibh mauris cursus mattis molestie a iaculis at. Imperdiet proin fermentum leo vel orci porta non pulvinar. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus.

Arcu dictum varius duis at consectetur lorem donec massa. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Volutpat diam ut venenatis tellus in. Vestibulum lectus mauris ultrices eros in cursus turpis. Consequat semper viverra nam libero justo laoreet. Libero justo laoreet sit amet cursus. Nunc sed id semper risus in hendrerit gravida rutrum. Neque egestas congue quisque egestas diam in arcu cursus. Eros donec ac odio tempor orci dapibus ultrices in. Lectus quam id leo in vitae turpis massa. In arcu cursus euismod quis viverra nibh cras. Turpis egestas integer eget aliquet nibh praesent. Dui vivamus arcu felis bibendum ut tristique et egestas quis. Nibh venenatis cras sed felis eget velit aliquet sagittis. Lobortis mattis aliquam faucibus purus. Urna id volutpat lacus laoreet non curabitur. Aliquam ut porttitor leo a.

Felis eget nunc lobortis mattis aliquam faucibus purus. Sed velit dignissim sodales ut eu. Egestas pretium aenean pharetra magna ac. Cras fermentum odio eu feugiat pretium nibh ipsum. Et molestie ac feugiat sed lectus vestibulum. Augue eget arcu dictum varius duis at consectetur lorem donec. Congue quisque egestas diam in arcu cursus euismod quis. Fusce id velit ut tortor pretium. Eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar. Tortor pretium viverra suspendisse potenti nullam. Lorem ipsum dolor sit amet consectetur. </string>
    <string name="required">Required</string>
    <string name="regex_phone_number_length">.*[0–9].*</string>
    <string name="chose_your_boat">Chose Your Boat</string>
    <string name="destination_info_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit eget gravida cum sociis natoque penatibus et. Purus gravida quis blandit turpis cursus in hac habitasse. A lacus vestibulum sed arcu. Ornare lectus sit amet est. Duis at consectetur lorem donec. Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Quis lectus nulla at volutpat diam ut venenatis tellus in. Turpis in eu mi bibendum neque egestas congue quisque. Id eu nisl nunc mi ipsum faucibus vitae. Sagittis orci a scelerisque purus semper. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Ligula ullamcorper malesuada proin libero nunc. Non tellus orci ac auctor augue mauris augue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Convallis tellus id interdum velit laoreet id donec. Hac habitasse platea dictumst quisque sagittis purus. Ut eu sem integer vitae. Adipiscing at in tellus integer feugiat.

Nulla facilisi etiam dignissim diam quis enim. Enim praesent elementum facilisis leo vel. Tellus in hac habitasse platea dictumst vestibulum. Arcu cursus euismod quis viverra nibh cras. Et tortor consequat id porta. Viverra maecenas accumsan lacus vel. Feugiat in fermentum posuere urna nec tincidunt praesent. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Nam libero justo laoreet sit. Tristique risus nec feugiat in fermentum posuere. Id eu nisl nunc mi ipsum faucibus vitae. Elementum integer enim neque volutpat ac tincidunt vitae.

Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus est. Sed risus pretium quam vulputate dignissim suspendisse. Varius morbi enim nunc faucibus a. Ultricies leo integer malesuada nunc vel risus commodo. Nunc mi ipsum faucibus vitae aliquet. Risus feugiat in ante metus dictum. Malesuada nunc vel risus commodo viverra. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Sed cras ornare arcu dui vivamus. Porttitor eget dolor morbi non arcu risus. Leo vel fringilla est ullamcorper eget nulla. Nibh venenatis cras sed felis eget velit aliquet sagittis. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Pharetra et ultrices neque ornare aenean euismod elementum. Est sit amet facilisis magna etiam tempor. Convallis convallis tellus id interdum velit laoreet id. Ante in nibh mauris cursus mattis molestie a iaculis at. Imperdiet proin fermentum leo vel orci porta non pulvinar. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus.

Arcu dictum varius duis at consectetur lorem donec massa. Purus ut faucibus pulvinar elementum integer enim neque volutpat. Volutpat diam ut venenatis tellus in. Vestibulum lectus mauris ultrices eros in cursus turpis. Consequat semper viverra nam libero justo laoreet. Libero justo laoreet sit amet cursus. Nunc sed id semper risus in hendrerit gravida rutrum. Neque egestas congue quisque egestas diam in arcu cursus. Eros donec ac odio tempor orci dapibus ultrices in. Lectus quam id leo in vitae turpis massa. In arcu cursus euismod quis viverra nibh cras. Turpis egestas integer eget aliquet nibh praesent. Dui vivamus arcu felis bibendum ut tristique et egestas quis. Nibh venenatis cras sed felis eget velit aliquet sagittis. Lobortis mattis aliquam faucibus purus. Urna id volutpat lacus laoreet non curabitur. Aliquam ut porttitor leo a.

Felis eget nunc lobortis mattis aliquam faucibus purus. Sed velit dignissim sodales ut eu. Egestas pretium aenean pharetra magna ac. Cras fermentum odio eu feugiat pretium nibh ipsum. Et molestie ac feugiat sed lectus vestibulum. Augue eget arcu dictum varius duis at consectetur lorem donec. Congue quisque egestas diam in arcu cursus euismod quis. Fusce id velit ut tortor pretium. Eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar. Tortor pretium viverra suspendisse potenti nullam. Lorem ipsum dolor sit amet consectetur.</string>
    <string name="contact_us">contact us</string>

</resources>